Bug 1290535 - Part 1: Sort paced subproperties before calculation. r=hiro

MozReview-Commit-ID: 9sEghbxLlzO